<resources>
    <string name="app_name">Bulletin_board</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Menu Drawer Strings -->
    <string name="ad_cat1"><font color="?attr/colorPrimary">Объявления</font></string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="def">Разное</string>
    <string name="favs">Избранное</string>
    <string name="ad_cat2"><font color="?attr/colorPrimary">Аккаунт</font></string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь!</string>
    <string name="ad_my_ads">Мои объявления</string>

    <!-- Sign dialog -->
    <string name="email_hint">Email</string>
    <string name="email_reset">Reset Email was sent!</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите Ваш Email адрес!</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти в аккаунт</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения!</string>
    <string name="send_verification_email_done">На вашу почту была отправлена ссылка для подтверждения вашего аккаунта!</string>

    <!-- Sign dialog -->
    <string name="link_done">Email подключен к Google</string>
    <string name="enter_to_google">У Вас уже есть аккаунт с этим Email адресом, войдите по нему.</string>

    <!-- Edit Activity -->
    <string name="edit_select_country">*Выберите страну</string>
    <string name="edit_select_city">*Выберите город</string>
    <string name="edit_index">*Индекс</string>
    <string name="edit_phone_number">*Номер телефона</string>
    <string name="edit_select_category">*Выберите категорию</string>
    <string name="edit_price">*Укажите цену</string>
    <string name="edit_description">*Описание</string>
    <string name="edit_with_shipping">С отправкой</string>
    <string name="edit_publish">Опубликовать</string>
    <string name="edit_title">*Название объявления</string>
    <string name="edit_no_country_selected">Страна не выбрана</string>
    <string name="edit_required_fields_empty">Все обязательные поля должны быть заполнены!</string>
    <string name="edit_need_auth">Чтобы создавать объявления, нужно авторизоваться</string>
    <string name="edit_submitted_for_moderation">Объявление отправлено на модерацию!</string>
    <string name="edit_submission_error">Ошибка отправки объявления!</string>
    <string name="edit_no_result">Нет результата</string>
    <string name="edit_send_option">Вариант отправки</string>

    <!-- Description Activity -->
    <string name="desc_ad_title">Название объявления</string>
    <string name="desc_ad_description">Описание</string>
    <string name="desc_price">Цена</string>
    <string name="desc_phone">Телефон</string>
    <string name="desc_email">Email</string>
    <string name="desc_country">Страна</string>
    <string name="desc_city">Город</string>
    <string name="desc_index">Индекс</string>
    <string name="desc_with_shipping">С отправкой</string>
    <string name="counter_text">1/3</string>

    <!-- Filter Activity -->
    <string name="hint_from">от</string>
    <string name="hint_to">до</string>
    <string name="button_apply_filter">Применить фильтр</string>
    <string name="button_clear_filter">Очистить фильтр</string>

    <!-- Ad list item -->
    <string name="price_desc">Цена:</string>
    <string name="ads_name">Название объявления</string>
    <string name="publication_time">Время публикации</string>
    <string name="main_image_description">Главное изображение объявления</string>
    <string name="view_counter_icon_description">Значок, отображающий количество просмотров</string>
    <string name="delete_ad_button_description">Кнопка для удаления объявления</string>
    <string name="edit_ad_button_description">Кнопка для редактирования объявления</string>

    <!-- Search bar -->
    <string name="search_ads">Поиск объявлений</string>
    <string name="search_hint">Введите текст для поиска</string>

    <!-- Settings -->
    <string name="settings">Настройки</string>
    <string name="title_main">Главное</string>
    <string name="app_language">Язык приложения</string>
    <string name="date_and_time">Дата и время</string>
    <string name="title_interface">Интерфейс</string>
    <string name="choose_style">Выберите стиль</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="light_theme">Светлая тема</string>

    <!-- Filters -->
    <string name="sort_by_ascending_price">По возрастанию цены</string>
    <string name="sort_by_descending_price">По убыванию цены</string>
    <string name="sort_by_newest">По новинкам</string>
    <string name="sort_by_popularity">По популярности</string>
    <string name="filters">Фильтры</string>

    <!-- Filters WithSend Field -->
    <string name="no_matter">Не важно</string>
    <string name="with_sending">С отправкой</string>
    <string name="without_sending">Без отправки</string>

    <!-- Pix -->
    <string name="pix_selection_limiter">Нельзя выбрать больше %d элементов.</string>
    <string name="pix_bottom_message_without_video">Перетащите изображения вверх для галереи</string>
    <string name="pix_bottom_message_with_only_video">Перетащите видео вверх для галереи</string>
    <string name="pix_bottom_message_with_video">Удерживайте для видео, нажмите для фото</string>
    <string name="pix_ok">ОК</string>
    <string name="pix_tap_to_select">Нажмите на фото для выбора</string>
    <string name="pix_selected">Выбрано</string>
    <string name="pix_recent">Недавние</string>
    <string name="pix_last_month">Прошлый месяц</string>
    <string name="pix_last_week">Прошлая неделя</string>
    <string name="pix_counter_number">0:00</string>
    <string name="click_button">Нажмите кнопку</string>
    <string name="camera_flash_button">Вспышка</string>
    <string name="lens_facing_button">Переключить камеру</string>

    <!-- Account -->
    <string name="guest">Гость</string>
    <string name="sign_in_done">Вход выполнен</string>
    <string name="google_sign_in_exception">Ошибка входа через Google</string>
    <string name="sign_in_as_guest_done">Вы вошли как Гость</string>
    <string name="sign_in_as_guest_error">Не удалось войти как Гость</string>

    <!-- Ad info -->
    <string name="with_send_yes">Да</string>
    <string name="with_send_no">Нет</string>
    <string name="ad_subject">Объявления</string>
    <string name="ad_text">Меня интересует ваше объявление!</string>
    <string name="open_with">Открыть с помощью</string>
    <string name="no_app_for_sending">Отсутствует приложение для отправки</string>

    <!-- Permissions -->
    <string name="permission_denied_notification">Разрешение отклонено, уведомления не могут быть отправлены</string>

    <!-- VoiceRecognition -->
    <string name="speak_something">Говорите что-нибудь</string>
    <string name="voice_recognition_not_supported">Голосовое распознавание не поддерживается на вашем устройстве</string>
    <string name="voice_recognition_no_results">Распознавание речи не дало результатов</string>
    <string name="voice_recognition_canceled">Распознавание речи отменено</string>

    <!-- Progress Dialog -->
    <string name="loading_message">Загрузка…</string>

</resources>