<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad_cat1" android:id="@+id/adsCat">

        <menu>
            <item
                android:id="@+id/id_my_ads"
                android:icon="@drawable/ic_notice"
                android:title="@string/ad_my_ads" />

            <item
                android:id="@+id/id_car"
                android:icon="@drawable/ic_car"
                android:title="@string/ad_car" />

            <item
                android:id="@+id/id_pc"
                android:icon="@drawable/ic_computer"
                android:title="@string/ad_pc" />

            <item
                android:id="@+id/id_smartphone"
                android:icon="@drawable/ic_smartphone"
                android:title="@string/ad_smartphone" />

            <item
                android:id="@+id/id_dm"
                android:icon="@drawable/ic_kitchen"
                android:title="@string/ad_dm" />
        </menu>

    </item>

    <item android:title="@string/ad_cat2" android:id="@+id/accCat">

        <menu>

            <!--            <item
                            android:id="@+id/remove_ads"
                            android:icon="@drawable/ic_sign_up"
                            android:title="Убрать рекламу" />-->
            <item
                android:id="@+id/id_sign_up"
                android:icon="@drawable/ic_sign_up"
                android:title="@string/ac_sign_up" />

            <item
                android:id="@+id/id_sign_in"
                android:icon="@drawable/ic_login"
                android:title="@string/ac_sign_in" />

            <item
                android:id="@+id/id_sign_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/ac_sign_out" />

        </menu>

    </item>

</menu>