<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    style="@style/Widget.Material3.BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/bottom_sheet_drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/filter_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/filter_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/address_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_margin="@dimen/filter_card_margin"
                    app:cardCornerRadius="@dimen/filter_card_corner_radius"
                    app:cardElevation="@dimen/filter_card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/filter_layout_padding">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/select_country_text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/filter_text_input_layout_margin_top"
                            android:hint="@string/edit_select_country">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/select_country_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/select_city_text_input_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/filter_text_input_layout_margin_top"
                            android:hint="@string/edit_select_city">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/select_city_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="false" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/filter_text_input_layout_margin_top"
                            android:hint="@string/edit_index">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/index_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="true"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/category_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/filter_card_margin"
                    app:cardCornerRadius="@dimen/filter_card_corner_radius"
                    app:cardElevation="@dimen/filter_card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/filter_layout_padding">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/edit_select_category">


                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/filter_text_input_layout_margin_top"
                            android:hint="@string/edit_send_option">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/select_send_option_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="false"
                                android:text="@string/no_matter" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/filter_price_text_view_margin_start"
                            android:layout_marginTop="@dimen/filter_price_text_view_margin_top"
                            android:text="@string/desc_price"
                            android:textSize="@dimen/filter_price_text_view_text_size">

                        </TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/price_from_text_input_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginEnd="@dimen/filter_price_input_layout_margin_horizontal"
                                android:layout_weight="1"
                                android:hint="@string/hint_from">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/price_from_edit_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:focusable="true"
                                    android:inputType="number" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/price_to_text_input_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/filter_price_input_layout_margin_horizontal"
                                android:layout_weight="1"
                                android:hint="@string/hint_to">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/price_to_edit_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:focusable="true"
                                    android:inputType="number" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/apply_filter_button"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_button_margin_horizontal"
                    android:layout_marginEnd="@dimen/filter_button_margin_horizontal"
                    android:text="@string/button_apply_filter" />

                <Button
                    android:id="@+id/clear_filter_button"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/filter_button_margin_horizontal"
                    android:layout_marginEnd="@dimen/filter_button_margin_horizontal"
                    android:layout_marginBottom="@dimen/filter_button_margin_bottom"
                    android:text="@string/button_clear_filter" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</FrameLayout>